# EQUDA2_Tracker_DAQ

./: .gitignore  CMakeLists.txt
hardware/: CMakeLists.txt
hardware/MosaicSrc/: Mosaic.h  TAlpideDataParser.cpp  TAlpideDataParser.h  alpidercv.cpp  alpidercv.h  controlinterface.cpp  controlinterface.h  pexception.cpp  pexception.h  trgrecorderparser.cpp  trgrecorderparser.h
hardware/MosaicSrc/libmosaic/: CMakeLists.txt
hardware/MosaicSrc/libmosaic/include/: genconsumer.h  i2cbus.h  i2cslave.h  i2csyspll.h  ipbus.h  ipbusudp.h  mboard.h  mcoordinator.h  mdatagenerator.h  mdatareceiver.h  mdatasave.h  mexception.h  mruncontrol.h  mservice.h  mtriggercontrol.h  mwbb.h  mwbbslave.h  pulser.h  trgrecorder.h  wishbonebus.h
hardware/MosaicSrc/libmosaic/src/: genconsumer.cpp  i2cbus.cpp  i2cslave.cpp  i2csyspll.cpp  ipbus.cpp  ipbusudp.cpp  mboard.cpp  mcoordinator.cpp  mdatagenerator.cpp  mdatareceiver.cpp  mdatasave.cpp  mexception.cpp  mruncontrol.cpp  mservice.cpp  mtriggercontrol.cpp  mwbbslave.cpp  pulser.cpp  trgrecorder.cpp
hardware/MosaicSrc/libpowerboard/: CMakeLists.txt
hardware/MosaicSrc/libpowerboard/include/: ADC128D818.h  ad5254.h  ad7997.h  ltc2635.h  max31865.h  max5419.h  pcf8574.h  powerboard.h  sc18is602.h
hardware/MosaicSrc/libpowerboard/src/: ADC128D818.cpp  ad5254.cpp  ad7997.cpp  ltc2635.cpp  max31865.cpp  max5419.cpp  pcf8574.cpp  powerboard.cpp  sc18is602.cpp
hardware/MosaicSrc/powerboard/: .gitignore  CMakeLists.txt  pbctrl.cpp  pbif.cpp  pbif.h  powerOff_Stave.sh  powerOn_Stave.sh  powerOn_Stave_digital_first.sh  setVout
hardware/MosaicSrc/powerboard/GUI/: .gitignore  CMakeLists.txt  pb_HS1-R_CERN.cfg  pb_M1.cfg
hardware/MosaicSrc/powerboard/GUI/pbGUI.app/Contents/: Info.plist
hardware/MosaicSrc/powerboard/GUI/src/: ledGreen.xpm  ledGrey.xpm  ledRed.xpm  main.cpp  optionsDialog.cpp  optionsDialog.h  pbMainWindow.cpp  pbMainWindow.h  setValidator.cpp  setValidator.h
hardware/ScopeControlSrc/: CMakeLists.txt  readme.md  scope_control.cpp  scope_control.h
hardware/ScopeControlSrc/serial/include/serial/: serial.h
hardware/ScopeControlSrc/serial/include/serial/impl/: unix.h
hardware/ScopeControlSrc/serial/src/: serial.cc
hardware/ScopeControlSrc/serial/src/impl/: unix.cc
hardware/ScopeControlSrc/serial/src/impl/list_ports/: list_ports_linux.cc
hardware/ScopeControlSrc/test/: tester.cpp
hardware/inc/: AlpideConfig.h  AlpideDebug.h  AlpideDecoder.h  BoardDecoder.h  Common.h  SetupHelpers.h  TAlpide.h  TApplyMask.h  TApplyTuning.h  TBoardConfig.h  TBoardConfigDAQ.h  TBoardConfigMOSAIC.h  TBoardConfigRU.h  TChipConfig.h  TConfig.h  TCycleAnalysis.h  TDACScan.h  TDCTRLAnalysis.h  TDCTRLMeasurement.h  TDataTaking.h  TDigitalAnalysis.h  TDigitalScan.h  TDigitalWFAnalysis.h  TEnduranceCycle.h  TEyeAnalysis.h  TEyeMeasurement.h  TFastPowerAnalysis.h  TFastPowerTest.h  TFifoAnalysis.h  TFifoTest.h  THIC.h  THicConfig.h  THisto.h  TLocalBusAnalysis.h  TLocalBusTest.h  TNoiseAnalysis.h  TNoiseOccupancy.h  TPowerAnalysis.h  TPowerBoard.h  TPowerBoardConfig.h  (+18 more)
hardware/libalpide/: CMakeLists.txt
hardware/src/: AlpideConfig.cpp  AlpideDebug.cpp  AlpideDecoder.cpp  BoardDecoder.cpp  Common.cpp  SetupHelpers.cpp  TAlpide.cpp  TApplyMask.cpp  TApplyTuning.cpp  TBoardConfig.cpp  TBoardConfigDAQ.cpp  TBoardConfigMOSAIC.cpp  TBoardConfigRU.cpp  TChipConfig.cpp  TConfig.cpp  TCycleAnalysis.cpp  TDACScan.cpp  TDCTRLAnalysis.cpp  TDCTRLMeasurement.cpp  TDataTaking.cpp  TDigitalAnalysis.cpp  TDigitalScan.cpp  TDigitalWFAnalysis.cpp  TEnduranceCycle.cpp  TEyeAnalysis.cpp  TEyeMeasurement.cpp  TFastPowerAnalysis.cpp  TFastPowerTest.cpp  TFifoAnalysis.cpp  TFifoTest.cpp  THIC.cpp  THicConfig.cpp  THisto.cpp  TLocalBusAnalysis.cpp  TLocalBusTest.cpp  TNoiseAnalysis.cpp  TNoiseOccupancy.cpp  TPowerAnalysis.cpp  TPowerBoard.cpp  TPowerBoardConfig.cpp  (+18 more)
misc/: Adapter.conf  MOSAIC_tests.conf  Tracker.conf  Tracker.ini  config_maker.py  config_run_820.txt  config_run_821.txt  config_run_822.txt  config_run_823.txt  config_run_827.txt  fake_hit_rate_scan.sh  init_configuration.sh  mosaic_run.sh  stave_run.sh  test.sh  test2.sh  threshold_scan.sh
misc/confs/alpide_confs/stave_0/: ALPIDE_0.conf  ALPIDE_1.conf  ALPIDE_2.conf  ALPIDE_3.conf  ALPIDE_4.conf  ALPIDE_5.conf  ALPIDE_7.conf  ALPIDE_8.conf
misc/confs/mosaic_confs/: Mosaic_0.conf
misc/ev_data/mosaic_test_data/: run_0_data_log.txt
misc/ev_data/ttree_data/: tree.root
misc/stave_stats/stave_0/: ITHR_curve_1.C  ITHR_curve_4.C  ITHR_curve_8.C  dv_curve_1.C  dv_curve_4.C  dv_curve_8.C  stave_0.json  stave_0.jsonstave_0.json  stave_stats_0.json
module/: CMakeLists.txt
module/inc/: DetectorEvent.h  DummyDataCollector.h  DummyProducer.h  MOSAICProducer.h  StaveFakeHitRateScanner.hh  StaveProducer.h  StaveROOTMonitor.h  StaveTTreeDataCollector.h  StaveTTreeDataCollectorTLUSync.h  StaveThresholdScanner.hh  TLUPayloadDecoder.h  circ_buffer.h
module/src/: DummyDataCollector.cc  DummyProducer.cc  MOSAICProducer.cc  StaveFakeHitRateScanner.cc  StaveProducer.cc  StaveProducerNoiseScans.cc  StaveProducerScanUtils.cc  StaveProducerThresholdScans.cc  StaveROOTMonitor.cc  StaveTTreeDataCollector.cc  StaveTTreeDataCollectorTLUSync.cc  StaveThresholdScanner.cc  fake_hit_rate_scan.cc  threshold_scan.cc
